--- a/compose.yml
+++ b/compose.yml
@@ -2,9 +2,9 @@
 version: "3.4"
 
 services:
-  zabbix:
+  server:
     build:
-      context: .
+      context: server/
       args:
         ZABBIX_VERSION: 7.0
         ZABBIX_REVISION: 2
@@ -12,10 +12,18 @@ services:
       - SYS_NICE  # required for MySQL
     ports:
       - "127.0.0.1:8080:8080"  # web frontend
-      - "10051:10051"  # connection from Zabbix agents
     secrets:
       - mysqlrootpw
       - mysqlzabbixpw
+
+  client:
+    deploy:
+      replicas: 3
+    build:
+      context: client/
+      args:
+        ZABBIX_VERSION: 7.0
+        ZABBIX_REVISION: 2
 
 secrets:
   mysqlrootpw:
