--- a/compose.yml
+++ b/compose.yml
@@ -15,6 +15,7 @@ services:
     secrets:
       - mysqlrootpw
       - mysqlzabbixpw
+      - zabbixpsk
 
   client:
     deploy:
@@ -24,9 +25,13 @@ services:
       args:
         ZABBIX_VERSION: 7.0
         ZABBIX_REVISION: 2
+    secrets:
+      - zabbixpsk
 
 secrets:
   mysqlrootpw:
     file: .mysql-root-pw
   mysqlzabbixpw:
     file: .mysql-zabbix-pw
+  zabbixpsk:
+    file: .zabbix_agents.psk
