--- a/server/etc/systemd/system/configure-zabbix-all.service
+++ b/server/etc/systemd/system/configure-zabbix-all.service
@@ -5,6 +5,7 @@ After=nginx.service zabbix-server.service
 
 [Service]
 ExecStart=/usr/local/bin/configure-zabbix-all.py
+RemainAfterExit=yes
 Type=oneshot
 
 [Install]
