--- a/client/etc/systemd/system/prepare-zabbix-agent.service
+++ b/client/etc/systemd/system/prepare-zabbix-agent.service
@@ -5,6 +5,7 @@ Before=zabbix-agent2.service
 
 [Service]
 ExecStart=/usr/local/bin/prepare-zabbix-agent.sh
+RemainAfterExit=yes
 Type=oneshot
 
 [Install]
